--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
     box-sizing: border-box;
 }
 body{
+    width : 100%;
+    height : 100%;
     margin : 0px;
     padding: 0px;
+    overflow-x: hidden;
     ;
     
     
@@ -44,7 +47,7 @@ nav{
 .top h1{
     
     color: white;
-    font-size: 3.5em;
+    font-size: 4vw;
     margin-top: 1.2em;
     margin-bottom: 2em;
     height: 2em;
